<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".CheckInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="third.space"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/labShopImage"
            android:layout_width="match_parent"
            android:layout_height="149dp"
            app:srcCompat="@drawable/labshopimage" />

        <TextView
            android:id="@+id/textViewReservationBooked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="You're all booked!"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/textViewReservationCoffeeShop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:linksClickable="true"
            android:text="@string/LabWebsiteLink"
            android:textAllCaps="false"
            android:textSize="14pt" />

        <TextView
            android:id="@+id/textViewReservationCoffeeShopStreet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:linksClickable="true"
            android:text="@string/LabWebsiteStreet"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/textViewReservationCoffeeShopCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:linksClickable="true"
            android:text="@string/LabWebsiteCity"
            android:textAllCaps="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView.date"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:background="#004D3E3E"
                android:text="OCTOBER 16"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#141010"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView.time"
                android:layout_width="299dp"
                android:layout_height="56dp"
                android:text="12:00PM-2:00PM"
                android:textAlignment="center"
                android:textColor="#1D1A1A"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonReservationHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="Help" />

            <Button
                android:id="@+id/buttonReservationModify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="Modify" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonReservationCafeMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cafe Menu" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Check In" />

        <ImageView
            android:id="@+id/labQRCode"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            app:srcCompat="@drawable/labwebsiteqrcode" />

    </LinearLayout>
</LinearLayout>