<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".CheckInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="third.space"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/labShopImage"
            android:layout_width="match_parent"
            android:layout_height="149dp"
            app:srcCompat="@drawable/labshopimage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewCLabShop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/LabWebsiteLink"
            android:textAllCaps="false"
            android:textSize="14pt"
            android:autoLink="web"
            android:linksClickable="true"/>

        <TextView
            android:id="@+id/textViewLabRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="     * * * *"
            android:textAllCaps="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewLabStreet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/LabWebsiteStreet"
            android:textAllCaps="false"
            android:autoLink="web"
            android:linksClickable="true"/>
        <TextView
            android:id="@+id/textViewLabCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/LabWebsiteCity"
            android:textAllCaps="false"
            android:autoLink="web"
            android:linksClickable="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAvailabilityTime1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="10:30am" />

            <Button
                android:id="@+id/buttonAvailabilityTime2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="10:45am" />

            <Spinner
                android:id="@+id/spinnerAvailabilityOtherTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerAvailabilityDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>

            <Spinner
                android:id="@+id/spinnerAvailabilityTableType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
        <Button
            android:id="@+id/buttonAvailabilityBookNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Book Now!" />

        <TextView
            android:id="@+id/textViewLabReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Reviews" />


    </LinearLayout>
</LinearLayout>