<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".CheckInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="third.space"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/AvalonShopImage"
            android:layout_width="match_parent"
            android:layout_height="149dp"
            app:srcCompat="@drawable/avaloncoffee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewAvalon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/AvalonWebsiteLink"
                android:textAllCaps="false"
                android:textSize="14pt"
                android:autoLink="web"
                android:linksClickable="true"/>

            <TextView
                android:id="@+id/textViewRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="     * * * *"
                android:textAllCaps="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewAvalonStreet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/AvalonWebsiteStreet"
            android:textAllCaps="false"
            android:autoLink="web"
            android:linksClickable="true"/>
        <TextView
            android:id="@+id/textViewAvalonCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/AvalonWebsiteCity"
            android:textAllCaps="false"
            android:autoLink="web"
            android:linksClickable="true"/>
        <RelativeLayout
            android:id="@+id/relativeheader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textViewReservationDate"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:hint="Select Date"
                android:textColor="#006064"
                android:textSize="12sp"
                android:textStyle="bold"
                android:background="@drawable/textviewborder"/>

            <TextView
                android:id="@+id/textViewReservationTime"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:hint="Select Time"
                android:textColor="#006064"
                android:textSize="12sp"
                android:textStyle="bold"
                android:background="@drawable/textviewborder"/>
            <Spinner
                android:id="@+id/spinnerReservationDuration"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="240dp"
                android:layout_marginTop="30dp"
                android:textColor="#006064"
                android:textSize="12sp"
                android:textStyle="bold"
                android:background="@drawable/textviewborder"
                android:spinnerMode="dropdown"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAvailabilityTime1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="10:30am" />

            <Button
                android:id="@+id/buttonAvailabilityTime2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="10:45am" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerAvailabilityDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>

            <Spinner
                android:id="@+id/spinnerAvailabilityTableType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
        <Button
            android:id="@+id/buttonAvailabilityBookNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Book Now!" />

        <TextView
            android:id="@+id/textViewAvalonReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Reviews" />

    </LinearLayout>
</LinearLayout>